EZ-1133 fix exercise tabs on small screens

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -212,8 +212,14 @@ nav.crumb-wrap .breadcrumb:before {
 }
 
 #exercise-card .tabs .tab a {
-    font-size: 2.1rem;
+    font-size: 1.7rem;
     color: gray;
+}
+
+@media only screen and (min-width: 601px) {
+    #exercise-card .tabs .tab a {
+        font-size: 2.1rem;
+    }
 }
 
 #exercise-card .tabs .tab a:hover,
